--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@types/winston": "^2.4.4",
     "aws-sdk": "^2.1677.0",
+    "axios": "^1.7.4",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -48,6 +49,7 @@
     "mongoose": "^6.6.1",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^3.3.4",
+    "node-fetch": "^3.3.2",
     "path": "^0.12.7",
     "verify-apple-id-token": "^3.1.2",
     "winston": "^3.13.0"
