--- a/.env.sample
+++ b/.env.sample
@@ -9,4 +9,5 @@ AWS_REGION=""
 S3_BASEURL=""
 GOOGLE_CLIENT_ID=""
 APPLE_CLIENT_ID=""
-USERINFO_ENDPOINT="
+USERINFO_ENDPOINT=""
+S3_STORAGE_LIMIT=1073741824
